fix location response when bucket created